[gd_scene load_steps=4 format=3 uid="uid://cwakr1joaem2j"]

[ext_resource type="Script" path="res://Scripts/ui.gd" id="1_ad2sj"]
[ext_resource type="StyleBox" uid="uid://jqa8dgagawo1" path="res://Resources/SkillBarBoxStyle.tres" id="2_0j1eo"]
[ext_resource type="PackedScene" uid="uid://dkaqqpg8dxhsq" path="res://Scenes/skill_bar_box.tscn" id="2_rkxis"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_ad2sj")

[node name="MainMargin" type="MarginContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="LookPanel" type="PanelContainer" parent="MainMargin"]
layout_mode = 2
theme_override_styles/panel = ExtResource("2_0j1eo")

[node name="Margin" type="MarginContainer" parent="MainMargin/LookPanel"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Hbox" type="VBoxContainer" parent="MainMargin/LookPanel/Margin"]
layout_mode = 2

[node name="StateLabel" type="Label" parent="MainMargin/LookPanel/Margin/Hbox"]
layout_mode = 2
text = "Input Mode"

[node name="LookLabel" type="Label" parent="MainMargin/LookPanel/Margin/Hbox"]
layout_mode = 2

[node name="LookLabel2" type="Label" parent="MainMargin/LookPanel/Margin/Hbox"]
layout_mode = 2

[node name="Margin" type="MarginContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -106.0
offset_top = -50.0
offset_right = 106.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 15

[node name="SkillBar" type="HBoxContainer" parent="Margin"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="SkillBarBox" parent="Margin/SkillBar" instance=ExtResource("2_rkxis")]
layout_mode = 2

[node name="SkillBarBox2" parent="Margin/SkillBar" instance=ExtResource("2_rkxis")]
layout_mode = 2

[node name="SkillBarBox3" parent="Margin/SkillBar" instance=ExtResource("2_rkxis")]
layout_mode = 2

[node name="SkillBarBox4" parent="Margin/SkillBar" instance=ExtResource("2_rkxis")]
layout_mode = 2

[node name="StartButton" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(300, 100)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -50.0
offset_right = 150.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="StartButton"]
layout_mode = 2
size_flags_vertical = 4
text = "Welcome to the Dungeon"

[connection signal="pressed" from="StartButton/Button" to="." method="_on_button_pressed"]
